layouts and styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>memes</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Press Start 2P", monospace;
+        background-color: #ccc;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
