--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./main.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
